Fix visual tests

--- a/test/visual/vaadin-text-area/styling.html
+++ b/test/visual/vaadin-text-area/styling.html
@@ -32,7 +32,9 @@
     </template>
   </dom-module>
 
-  <vaadin-text-area error-message="error" label="Label" required></vaadin-text-area>
+  <div id="text-area">
+    <vaadin-text-area error-message="error" label="Label" required></vaadin-text-area>
+  </div>
 
   <script>
     document.addEventListener('WebComponentsReady', function() {
