--- a/test/visual/vaadin-text-field/styling.html
+++ b/test/visual/vaadin-text-field/styling.html
@@ -32,7 +32,9 @@
     </template>
   </dom-module>
 
-  <vaadin-text-field error-message="error" label="Label" required></vaadin-text-field>
+  <div id="text-field">
+    <vaadin-text-field error-message="error" label="Label" required></vaadin-text-field>
+  </div>
 
   <script>
     document.addEventListener('WebComponentsReady', function() {
