--- a/vaadin-text-area.html
+++ b/vaadin-text-area.html
@@ -157,7 +157,8 @@ This program is available under Apache License Version 2.0, available at https:/
 
           // IE11 flexbox doesn't respect max-height constraints. Enforce the
           // constraints with an explicit height value
-          container.style.height = container.clientHeight + 'px';
+          const fixedHeight = container.clientHeight + 'px';
+          container.style.height = fixedHeight;
           this.focusElement.scrollTop = scrollTop;
         }
 
