--- a/vaadin-text-field-mixin.html
+++ b/vaadin-text-field-mixin.html
@@ -170,6 +170,9 @@ This program is available under Apache License Version 2.0, available at https:/
         return label ? labelId : undefined;
       }
 
+      /**
+       * @protected
+       */
       attributeChangedCallback(prop, oldVal, newVal) {
         super.attributeChangedCallback(prop, oldVal, newVal);
         // Needed until Edge has CSS Custom Properties (present in Edge Preview)
@@ -191,4 +194,3 @@ This program is available under Apache License Version 2.0, available at https:/
       }
     };
   </script>
-  
