--- a/vaadin-text-area.html
+++ b/vaadin-text-area.html
@@ -6,7 +6,12 @@ This program is available under Apache License Version 2.0, available at https:/
 
 <link rel="import" href="../polymer/polymer-element.html">
 <link rel="import" href="vaadin-text-field-mixin.html">
-<link rel="import" href="vaadin-text-field-styles.html">
+
+<dom-module id="vaadin-text-area-default-theme" theme-for="vaadin-text-area">
+  <template>
+    <style include="vaadin-text-field-default-theme-common"></style>
+  </template>
+</dom-module>
 
 <dom-module id="vaadin-text-area">
   <template>
