--- a/vaadin-text-area.html
+++ b/vaadin-text-area.html
@@ -131,15 +131,18 @@ This program is available under Apache License Version 2.0, available at https:/
           return 'vaadin-text-area';
         }
 
-        _valueChanged(newVal, oldVal) {
-          // setting initial value to empty string, skip validation
-          if (newVal === '' && oldVal === undefined) {
-            return;
-          }
-          if (this.invalid) {
-            this.validate();
-          }
-          this._setHasValue(newVal !== '' && newVal != null);
+        static get observers() {
+          return [
+            '_textAreaValueChanged(value)'
+          ];
+        }
+
+        ready() {
+          super.ready();
+          this._updateHeight();
+        }
+
+        _textAreaValueChanged(value) {
           this._updateHeight();
         }
 
@@ -165,29 +168,6 @@ This program is available under Apache License Version 2.0, available at https:/
           const fixedHeight = container.clientHeight + 'px';
           container.style.height = fixedHeight;
           this.focusElement.scrollTop = scrollTop;
-        }
-
-        /**
-         * Returns true if the current textarea value satisfies all constraints (if any)
-         */
-        checkValidity() {
-          if (this.required || this.maxlength || this.minlength) {
-            return this.focusElement.checkValidity();
-          } else {
-            return !this.invalid;
-          }
-        }
-
-        ready() {
-          super.ready();
-          if (!(window.ShadyCSS && window.ShadyCSS.nativeCss)) {
-            this.updateStyles();
-          }
-
-          var uniqueId = TextAreaElement._uniqueId = 1 + TextAreaElement._uniqueId || 0;
-          this._errorId = `${this.constructor.is}-error-${uniqueId}`;
-          this._labelId = `${this.constructor.is}-label-${uniqueId}`;
-          this._updateHeight();
         }
       }
 
