Make readonly property reflect to attribute

--- a/vaadin-text-field-mixin.html
+++ b/vaadin-text-field-mixin.html
@@ -123,7 +123,8 @@ This program is available under Apache License Version 2.0, available at https:/
            * This attribute indicates that the user cannot modify the value of the control.
            */
           readonly: {
-            type: Boolean
+            type: Boolean,
+            reflectToAttribute: true
           },
 
           /**
