Make required property reflect to attribute

--- a/vaadin-text-field-mixin.html
+++ b/vaadin-text-field-mixin.html
@@ -130,7 +130,8 @@ This program is available under Apache License Version 2.0, available at https:/
            * Specifies that the user must fill in a value.
            */
           required: {
-            type: Boolean
+            type: Boolean,
+            reflectToAttribute: true
           },
 
 
