--- a/vaadin-text-field.html
+++ b/vaadin-text-field.html
@@ -127,6 +127,7 @@ This program is available under Apache License Version 2.0, available at https:/
        * `invalid` | Set when the element is invalid | :host
        * `focused` | Set when the element is focused | :host
        * `focus-ring` | Set when the element is keyboard focused | :host
+       * `readonly` | Set to a readonly text field | :host
        *
        * @memberof Vaadin
        * @mixes Vaadin.TextFieldMixin
