Hide overflow when textarea can't be scrolled

--- a/demo/text-area-demos.html
+++ b/demo/text-area-demos.html
@@ -27,7 +27,7 @@
         </style>
         <vaadin-text-area
             class="max-height"
-            label="Text area growing stops at 125px"
+            label="Text area doesn't grow over 125px"
             placeholder="Add more text here">
         </vaadin-text-area>
       </template>
