--- a/vaadin-text-area.html
+++ b/vaadin-text-area.html
@@ -39,6 +39,8 @@ This program is available under Apache License Version 2.0, available at https:/
         display: flex;
         flex-grow: 1;
         min-height: 4.5em;
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
       }
 
       [part="value"] {
@@ -46,6 +48,7 @@ This program is available under Apache License Version 2.0, available at https:/
         box-sizing: border-box;
         flex: 1;
         resize: none;
+        overflow: hidden;
       }
 
       [part="value"]::-ms-clear {
@@ -141,6 +144,7 @@ This program is available under Apache License Version 2.0, available at https:/
         ready() {
           super.ready();
           this._updateHeight();
+          this._isIE = !!(navigator.userAgent.match(/Trident/) && !navigator.userAgent.match(/MSIE/));
         }
 
         _textAreaValueChanged(value) {
@@ -148,27 +152,39 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         _updateHeight() {
-          const scrollTop = this.focusElement.scrollTop;
+          const inputField = this.root.querySelector('[part=input-field]');
+          const scrollTop = inputField.scrollTop;
           const container = this.root.querySelector('.vaadin-text-area-container');
+          const input = this.focusElement;
+          
+          const inputWidth = getComputedStyle(input).width;
           // Clear container enforced height
           container.style.height = '';
 
-          const inputField = this.root.querySelector('[part=input-field]');
-
           const valueLength = this.value ? this.value.length : 0;
+          // Only clear the height when the content shortens to minimize scrollbar flickering.
           if (this._oldValueLength >= valueLength) {
-            // Only clear the height when the content shortens to minimize scrollbar flickering.
-            inputField.style.height = '';
+            // Fix the input element width so its scroll height isn't affected by host's disappearing scrollbars
+            input.style.maxWidth = inputWidth;
+            input.style.height = '';
+            // Avoid a jumpy Safari rendering issue
+            container.style.display = 'block';
           }
           this._oldValueLength = valueLength;
 
-          inputField.style.height = this.focusElement.scrollHeight + 'px';
-
+          const inputHeight = input.scrollHeight + 'px';
+          input.style.height = inputHeight;
+          // Restore
+          input.style.maxWidth = '';
+          container.style.display = '';
+        
           // IE11 flexbox doesn't respect max-height constraints. Enforce the
           // constraints with an explicit height value
-          const fixedHeight = container.clientHeight + 'px';
-          container.style.height = fixedHeight;
-          this.focusElement.scrollTop = scrollTop;
+          if (this._isIE) {
+            const containerHeight = container.clientHeight + 'px';
+            container.style.height = containerHeight;
+          }
+          inputField.scrollTop = scrollTop;
         }
       }
 
