--- a/vaadin-password-field.html
+++ b/vaadin-password-field.html
@@ -90,6 +90,10 @@ This program is available under Apache License Version 2.0, available at https:/
           return 'vaadin-password-field';
         }
 
+        static get version() {
+          return '1.2.0-alpha1';
+        }
+
         static get properties() {
           return {
             /**
