--- a/vaadin-text-area.html
+++ b/vaadin-text-area.html
@@ -132,6 +132,10 @@ This program is available under Apache License Version 2.0, available at https:/
           return 'vaadin-text-area';
         }
 
+        static get version() {
+          return '1.2.0-alpha1';
+        }
+
         static get observers() {
           return [
             '_textAreaValueChanged(value)'
