--- a/vaadin-text-field.html
+++ b/vaadin-text-field.html
@@ -139,6 +139,10 @@ This program is available under Apache License Version 2.0, available at https:/
           return 'vaadin-text-field';
         }
 
+        static get version() {
+          return '1.2.0-alpha1';
+        }
+
         static get properties() {
           return {
 
