--- a/vaadin-text-area.html
+++ b/vaadin-text-area.html
@@ -154,7 +154,12 @@ This program is available under Apache License Version 2.0, available at https:/
 
         ready() {
           super.ready();
-          this._updateHeight();
+          const innerValue = this.textContent.replace(/^ *\n/, '');
+          if (!this.value && innerValue) {
+            this.value = innerValue;
+          } else {
+            this._updateHeight();
+          }
         }
 
         _textAreaValueChanged(value) {
