Fixed typo in the demo

--- a/demo/text-field-basic-demos.html
+++ b/demo/text-field-basic-demos.html
@@ -53,9 +53,9 @@
     <vaadin-demo-snippet id='text-field-basic-demos-right-to-left'>
       <template preserve-content>
         <div class="container" dir="rtl">
-          <vaadin-text-field label="كلمه السر" placeholder="أنشئ كلمة مرور"></vaadin-text-field>
-          <vaadin-text-field label="البادئة واللاحقة">
-            <span slot="prefix">اختصار</span>
+          <vaadin-text-field label="كلمه السر" placeholder="أنشئ كلمةالسر "></vaadin-text-field>
+          <vaadin-text-field label="البادئة و اللاحقة">
+            <span slot="prefix">البادئة</span>
             <span slot="suffix">لاحقة</span>
           </vaadin-text-field>
         </div>
