Add JSDoc for checkValidity method

--- a/vaadin-text-field-mixin.html
+++ b/vaadin-text-field-mixin.html
@@ -211,6 +211,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
       /**
        * Returns true if the current input value satisfies all constraints (if any)
+       * @returns {boolean}
        */
       checkValidity() {
         if (this.required || this.pattern || this.maxlength || this.minlength) {
