--- a/test/text-field.html
+++ b/test/text-field.html
@@ -92,28 +92,28 @@
 
         it('setting input value updates has-value attribute', function() {
           textField.value = 'foo';
-          expect(textField.hasValue).to.be.true;
+          expect(textField.hasAttribute('has-value')).to.be.true;
         });
 
         it('setting value to undefine should not update has-value attribute', function() {
           textField.value = undefined;
-          expect(textField.hasValue).to.be.false;
+          expect(textField.hasAttribute('has-value')).to.be.false;
         });
 
-        it('setting empty value does not update has-value property', function() {
+        it('setting empty value does not update has-value attribute', function() {
           textField.value = '';
-          expect(textField.hasValue).to.be.false;
+          expect(textField.hasAttribute('has-value')).to.be.false;
         });
 
         // User could accidently set a 0 or false value
-        it('setting number value updates has-value property', function() {
+        it('setting number value updates has-value attribute', function() {
           textField.value = 0;
-          expect(textField.hasValue).to.be.true;
+          expect(textField.hasAttribute('has-value')).to.be.true;
         });
 
-        it('setting boolean value updates has-value property', function() {
+        it('setting boolean value updates has-value attribute', function() {
           textField.value = false;
-          expect(textField.hasValue).to.be.true;
+          expect(textField.hasAttribute('has-value')).to.be.true;
         });
       });
 
