Make sure the field has focus when revealed

--- a/test/password-field.html
+++ b/test/password-field.html
@@ -59,10 +59,17 @@
           expect(revealButton.hidden).to.be.true;
         });
 
-        it('should prevent mousedown event on reveal-button', function() {
+        it('should prevent mousedown event on reveal-button when focused', function() {
           const e = new CustomEvent('mousedown', {bubbles: true, cancelable: true});
+          passwordField.focus();
           revealButton.dispatchEvent(e);
           expect(e.defaultPrevented).to.be.true;
+        });
+
+        it('should not prevent mousedown event on reveal-button when not focused', function() {
+          const e = new CustomEvent('mousedown', {bubbles: true, cancelable: true});
+          revealButton.dispatchEvent(e);
+          expect(e.defaultPrevented).to.be.false;
         });
       });
 
