--- a/vaadin-password-field.html
+++ b/vaadin-password-field.html
@@ -46,7 +46,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
     <div
       part="reveal-button"
-      on-mousedown="_preventDefault"
+      on-mousedown="_revealButtonMouseDown"
       on-click="_togglePasswordVisibility"
       hidden$="[[revealButtonHidden]]">
     </div>
@@ -146,8 +146,10 @@ This program is available under Apache License Version 2.0, available at https:/
           });
         }
 
-        _preventDefault(e) {
-          e.preventDefault();
+        _revealButtonMouseDown(e) {
+          if (this.hasAttribute('focused')) {
+            e.preventDefault();
+          }
         }
 
         _togglePasswordVisibility() {
