--- a/theme/valo/vaadin-password-field.html
+++ b/theme/valo/vaadin-password-field.html
@@ -1,9 +1,11 @@
-<link rel="import" href="vaadin-text-field.html">
+<link rel="import" href="../../../vaadin-valo-theme/color.html">
 <link rel="import" href="../../../vaadin-valo-theme/font-icons.html">
+
+<link rel="import" href="vaadin-text-field.html">
 
 <dom-module id="valo-password-field" theme-for="vaadin-password-field">
   <template>
-    <style include="vaadin-password-field-default-theme">
+    <style>
       [part="reveal-button"] {
         font-family: "valo-icons";
         font-size: 24px;
@@ -14,6 +16,14 @@
 
       [part="reveal-button"]:hover {
         color: var(--valo-contrast-80pct);
+      }
+
+      [part="reveal-button"]::before {
+        content: "\e900";
+      }
+
+      :host([password-visible]) [part="reveal-button"]::before {
+        content: "\e901";
       }
     </style>
   </template>
