--- a/theme/valo/vaadin-text-area.html
+++ b/theme/valo/vaadin-text-area.html
@@ -1,3 +1,6 @@
+<link rel="import" href="../../../vaadin-valo-theme/sizing.html">
+<link rel="import" href="../../../vaadin-valo-theme/typography.html">
+
 <link rel="import" href="vaadin-text-field.html">
 
 <dom-module id="valo-text-area" theme-for="vaadin-text-area">
