--- a/demo/text-field-basic-demos.html
+++ b/demo/text-field-basic-demos.html
@@ -138,41 +138,32 @@
     <h3>Full Form</h3>
     <vaadin-demo-snippet id='text-field-basic-demos-full-form'>
       <template preserve-content>
-        <style>
-          span {
-            font-size: 80%;
-          }
-
-          .form-item {
-            display: flex;
-            align-items: flex-end;
-            margin-bottom: 16px;
-          }
-        </style>
         <h4>Registration Form</h4>
         <iron-form>
           <form>
-            <div class="form-item">
+            <div>
               <vaadin-text-field label="User Name" minlength="4" maxlength="8" required pattern="^\w+$"></vaadin-text-field>
               <span>* from 4 to 8 characters without spaces</span>
             </div>
-            <div class="form-item">
+            <div>
               <vaadin-text-field label="Email" required></vaadin-text-field>
               <span>*</span>
             </div>
-            <div class="form-item">
+            <div>
               <vaadin-text-field label="Initials" minlength="3" maxlength="3"></vaadin-text-field>
               <span>3 characters</span>
             </div>
-            <div class="form-item">
+            <div>
               <vaadin-text-field label="Age" pattern="\d\d\d*" required></vaadin-text-field>
               <span>* 2 digits age</span>
             </div>
-            <div class="form-item">
+            <div>
               <vaadin-text-field label="Password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"></vaadin-text-field>
               <span>* 6 characters min including uppercase and number</span>
             </div>
-            <button onclick="_submit()">Submit</button>
+            <div style="margin-top: 1.5em;">
+              <button onclick="_submit()">Submit</button>
+            </div>
           </form>
         </iron-form>
         <script>
